--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -2,7 +2,7 @@
 /****  CUSTOM CSS FOR EvaDB  ****/
 /******************************/
 
- /* Insipred  by https://github.com/ray-project/ray/blob/692428a67e65d2f055f828ed6331cf5fbe732b02/doc/source/_static/css/custom.css */
+ /* Inspired  by https://github.com/ray-project/ray/blob/692428a67e65d2f055f828ed6331cf5fbe732b02/doc/source/_static/css/custom.css */
 
 
  :root {
