--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -9,7 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;700&display=swap');
 
  :root {
-    --orange: #FF9300;
+    --orange: #15141A;
 }
 
 /* --------- left and right TOCs --------- */
